--- a/index.html
+++ b/index.html
@@ -23,7 +23,40 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
  
-
+  <script type="text/javascript">//<![CDATA[
+  (function() {
+      var configuration = {
+      "token": "dda8a6daaddb95468184e0a41885f117",
+      "excludeDomains": [
+          "https://kikim5959.github.io/coachsport/"
+      ],
+      "capping": {
+          "limit": 3,
+          "timeout": 24
+      },
+      "entryScript": {
+          "type": "timeout",
+          "timeout": 3000,
+          "capping": {
+              "limit": 5,
+              "timeout": 24
+          }
+      },
+      "exitScript": {
+          "enabled": true
+      },
+      "popUnder": {
+          "enabled": true
+      }
+  };
+      var script = document.createElement('script');
+      script.async = true;
+      script.src = '//cdn.shorte.st/link-converter.min.js';
+      script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
+      var entry = document.getElementsByTagName('script')[0];
+      entry.parentNode.insertBefore(script, entry);
+  })();
+  //]]></script>
  
   </head><body>
     <!-- Navigation -->
@@ -288,16 +321,6 @@
       </nav>
     </div>
   
-<script type="text/javascript">
-    var adfly_id = 14272929;
-    var adfly_advert = 'int';
-    var frequency_cap = 5;
-    var frequency_delay = 5;
-    var init_delay = 3;
-    var popunder = true;
-</script>
-
-    <script src="https://cdn.adf.ly/js/entry.js"></script>
  
  
 
